Bug 98888 - [Qt][WK2] REGRESSION(r130879): It made fast/events/touch/* tests crash
Summary: [Qt][WK2] REGRESSION(r130879): It made fast/events/touch/* tests crash
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 420+
Hardware: All All
: P1 Critical
Assignee: Andras Becsi
URL:
Keywords: Qt, QtTriaged
Depends on:
Blocks: 79668 98642
  Show dependency treegraph
 
Reported: 2012-10-10 05:26 PDT by Csaba Osztrogonác
Modified: 2012-10-10 06:44 PDT (History)
5 users (show)

See Also:


Attachments
Patch (6.71 KB, patch)
2012-10-10 06:24 PDT, Jocelyn Turcotte
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2012-10-10 05:26:50 PDT
It is ridiculous that fixing a "regression caused one fail"
caused 6 crashes. But now it happened, see this URL for details:
http://build.webkit.sed.hu/builders/x86-64%20Linux%20Qt%20Release%20WebKit2%20%28Amazon%20EC2%29/builds/9585
Comment 1 Andras Becsi 2012-10-10 05:31:37 PDT
That's what I was afraid of. Looks like an early return is missing somewhere, I'm going to take a look.
Comment 2 Csaba Osztrogonác 2012-10-10 05:33:20 PDT
just a note: I prefer early testing ;-) (before commiting buggy patches)
Comment 3 Jocelyn Turcotte 2012-10-10 06:24:01 PDT
Created attachment 167988 [details]
Patch

Hopefully that is the last iteration, this is getting pretty embarassing.
Comment 4 WebKit Review Bot 2012-10-10 06:44:03 PDT
Comment on attachment 167988 [details]
Patch

Clearing flags on attachment: 167988

Committed r130894: <http://trac.webkit.org/changeset/130894>
Comment 5 WebKit Review Bot 2012-10-10 06:44:07 PDT
All reviewed patches have been landed.  Closing bug.