[Qt][WK2] REGRESSION(r130879): It made fast/events/touch/* tests crash https://bugs.webkit.org/show_bug.cgi?id=98888

Reviewed by Kenneth Rohde Christiansen.

Add null-checks in the gesture recognizers to allow them working without a PageViewportController.
The pinch and pan gesture recognizers aren't used in that case yet, but they could eventually
be used to send pinch and pan gesture events to the web process. They are currently kept active
because we need the tap gesture recognizer and its logic is bound to those other recognizers.

* UIProcess/qt/QtPanGestureRecognizer.cpp:
(WebKit::QtPanGestureRecognizer::update):
(WebKit::QtPanGestureRecognizer::finish):
(WebKit::QtPanGestureRecognizer::cancel):
* UIProcess/qt/QtPinchGestureRecognizer.cpp:
(WebKit::QtPinchGestureRecognizer::update):
(WebKit::QtPinchGestureRecognizer::finish):
(WebKit::QtPinchGestureRecognizer::cancel):


Canonical link: https://commits.webkit.org/116872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130894 268f45cc-cd09-0410-ab3c-d52691b4dbfc